fixed HTML and home button

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Data Structure Visualizer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -53,6 +54,8 @@
                 <button id="traverse-tree-btn">Traverse Tree</button>
             </div>
         </div>
+
+        <button id="home-btn" style="display: none;">Home</button>
     </main>
 
     <script src="script.js"></script>
