added selector button function

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <h1>Data Structures Visualizer</h1>
     </header>
     <main>
-        <div id="instructions">Select a data structure to visualize its operations.</div>
-        <button id="array-btn">Array</button>
-        <button id="stack-btn">Stack</button>
-        <button id="queue-btn">Queue</button>
-        <button id="linked-list-btn">Linked List</button>
-        <button id="binary-tree-btn">Binary Tree</button>
+        <div id="instructions" class="selector-button">Select a data structure to visualize its operations.</div>
+        <button id="array-btn" class="selector-button">Array</button>
+        <button id="stack-btn" class="selector-button">Stack</button>
+        <button id="queue-btn" class="selector-button">Queue</button>
+        <button id="linked-list-btn" class="selector-button">Linked List</button>
+        <button id="binary-tree-btn" class="selector-button">Binary Tree</button>
         
         <div id="visualizations">
             <div class="visualization" id="array-visualization" style="display: none;">
@@ -55,7 +55,7 @@
             </div>
         </div>
 
-        <button id="home-btn" style="display: none;">Home</button>
+        <button id="home-btn" style="display: none;">Back</button>
     </main>
 
     <script src="script.js"></script>
